<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="change_city">Change city</string>

    <!-- Put your own APP ID here -->
    <string name="open_weather_maps_app_id">11111</string>
    <string name="weather_sunny"></string>
    <string name="weather_clear_night"></string>
    <string name="weather_foggy"></string>
    <string name="weather_cloudy"></string>
    <string name="weather_rainy"></string>
    <string name="weather_snowy"></string>
    <string name="weather_thunder"></string>
    <string name="weather_drizzle"></string>
    <string name="place_not_found">Sorry, no weather data found.</string>
    <string name="app_name">Log in</string>
    <string name="username">Username:</string>
    <string name="password">Password:</string>
    <string name="signin">Sign In</string>
    <string name="forgot">Forgot password ?</string>
    <string name="register">Sign up</string>
    <string name="title_activity_profile">Profile</string>
    <string name="hello_world">Hello world!</string>
    <string name="profile_username">Username:</string>
    <string name="profile_password">Password:</string>
    <string name="profile_fullname">Full Name:</string>
    <string name="profile_gender">Gender:</string>
    <string name="profile_age">Age:</string>
    <string name="profile_city">City:</string>
    <string name="profile_language">Language:</string>
    <string name="profile_contactInfo">Contact Info</string>
    <string name="profile_profileInfo">Profile Info</string>
    <string name="profile_email">Email:</string>
    <string name="profile_phone">Phone:</string>
    <string name="title_activity_signup">Signup</string>
    <string name="signup_username">Username:</string>
    <string name="signup_password">Password:</string>
    <string name="signup_email">Email:</string>
    <string name="signup_repassword">Retype password:</string>
    <string name="signup_button">Sign Up</string>

    <string-array name="languages">
        <item>Not specified</item>
        <item>Romanian</item>
        <item>English</item>
        <item>German</item>
        <item>French</item>
    </string-array>
    <string-array name="genders">
        <item>Not specified</item>
        <item>Male</item>
        <item>Female</item>
    </string-array>

    <string name="title_activity_home_page">home_page</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_favourites_links">FavouritesLinks</string>
    <string name="title_activity_choose_players">ChoosePlayers</string>

</resources>
