<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="10dp"
    android:paddingRight="10dp">
    <ScrollView android:layout_width="fill_parent"
            android:layout_height="wrap_content">
     <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:divider="@drawable/divider"
        android:showDividers="middle">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/usernameView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile_username"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile_username"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/passwordView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile_password"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Change Password"
            android:id="@+id/button7"
            android:onClick="popDialog" />

        <TextView
            android:id="@+id/profileInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile_profileInfo"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="#33B5E5" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="10dp" >

        <TextView
            android:id="@+id/fullnameView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile_fullname"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <EditText
            android:id="@+id/fullname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Medium Text"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/GenderView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile_gender"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <Spinner
            android:id="@+id/gender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/profile_gender"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/ageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile_age"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <EditText
            android:id="@+id/age"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/profile_age"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/cityView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile_city"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <EditText
            android:id="@+id/city"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/profile_city"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/languageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/profile_language"
            android:textAppearance="?android:attr/textAppearanceSmall" />
		<Spinner
            android:id="@+id/language"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/profile_language"
            android:textAppearance="?android:attr/textAppearanceMedium" />
        <TextView
            android:id="@+id/contactInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile_contactInfo"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="#33B5E5" />

        

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="10dp" >

        <TextView
            android:id="@+id/emailView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile_email"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/profile_email"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/phoneView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile_phone"
            android:textAppearance="?android:attr/textAppearanceSmall" />
        <EditText
        android:id="@+id/phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:text="@string/profile_phone"
        android:textAppearance="?android:attr/textAppearanceMedium" >
    </EditText>
    </LinearLayout>
    <Button
        android:id="@+id/Save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:onClick="saveData"
        android:text="Save"
       />
   </LinearLayout>
   </ScrollView>

    

   </LinearLayout>
