<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="${relativePackage}.${activityClass}"
    android:paddingBottom="10dp" 
    android:paddingTop="10dp" 
    android:paddingLeft="10dp" 
    android:paddingRight="10dp" >

    <TextView
        android:id="@+id/usernameView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/signup_username"
        android:layout_marginTop="5dp" />
	  <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/usernameView"
        android:layout_alignParentLeft="true"
        android:inputType="text"
        android:ems="10" />
    
    <TextView
        android:id="@+id/emailView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/username"
        android:text="@string/signup_email" 
        android:layout_marginTop="10dp"/>
    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/emailView"
        android:layout_alignParentLeft="true"
         android:ems="10"
        android:inputType="textEmailAddress" >
    </EditText>
    
    <TextView
        android:id="@+id/passwordView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/email"
        android:text="@string/signup_password"
        android:layout_marginTop="10dp" />
    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/passwordView"
        android:layout_alignParentLeft="true"
         android:ems="10"
        android:inputType="textPassword" />
     <EditText
        android:id="@+id/repassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/repasswordView"
        android:layout_alignParentLeft="true"
        android:ems="10"
        android:inputType="textPassword" />
    <TextView
        android:id="@+id/repasswordView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/password"
        android:text="@string/signup_repassword" 
        android:layout_marginTop="10dp"/>
 
    

    <Button
        android:id="@+id/button1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/repassword"
        android:layout_below="@+id/repassword"
        android:layout_marginTop="54dp"
        android:text="@string/signup_button" 
        android:onClick="signup"/>

</RelativeLayout>
